fix: add archiver and s3 prefix to api paths
